# Stagewarden

./: .gitignore  .stagewarden_settings.json  AGENT_MANIFESTO.md  AGENT_POLICY.json  AGENT_POLICY.md  HANDOFF.md  LICENSE  README.md  README_IT.md  docs_ljson.md  pyproject.toml  run_model_stub  setup.ps1  setup.sh
agent_cli/: __init__.py  agent.py  caveman.py  config.py  executor.py  handoff.py  ljson.py  main.py  memory.py  planner.py  prince2.py  router.py  textcodec.py
agent_cli/tools/: __init__.py  files.py  git.py  shell.py
benchmarks/: ljson_benchmark.py
docs/: external_io_help_audit.md  source_references.md  status_research.md
examples/: ljson_usage.py
js/: ljson.js  ljson.test.mjs
scripts/: setup_linux.sh  setup_unix.sh  setup_windows.ps1  test_chatgpt_browser_flow.sh  test_chatgpt_flow.sh
stagewarden/: __init__.py  agent.py  auth.py  caveman.py  commands.py  config.py  executor.py  extensions.py  handoff.py  ljson.py  main.py  memory.py  modelprefs.py  permissions.py  planner.py  prince2.py  project_handoff.py  provider_registry.py  role_tree.py  roles.py  router.py  runtime_env.py  secrets.py  shell_compat.py
stagewarden/tools/: external_io.py  files.py  git.py  shell.py
tests/: test_agent_integration.py  test_auth.py  test_caveman.py  test_executor.py  test_handoff.py  test_ljson.py  test_memory.py  test_parser.py  test_persistence.py  test_planner.py  test_policy_docs.py  test_prince2.py  test_provider_registry.py  test_router.py  test_setup_scripts.py  test_slash_palette_non_tty.py  test_tools.py  test_trace_cli.py
