[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stagewarden"
version = "0.1.0"
description = "A production-grade CLI coding agent that plans, executes, validates, and escalates work with Codex-style loops, safe tool use, and PRINCE2-aligned control."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Donato Pepe" }]
license = "MIT"
dependencies = []

[project.scripts]
stagewarden = "stagewarden.main:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["stagewarden*"]
